[project]
name = "msgraph"
version = "0.1.0"
description="A python package to make using the Microsoft Graph API easier."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "nose>=1.3.7",
    "pytest>=8.3.5",
    "requests-mock>=1.12.1",
]
